--- a/index.html
+++ b/index.html
@@ -164,38 +164,56 @@
             
             <div class="item-1">
                 <div class="accordion">
-                <div class="faq-title">First question</div>
+                <div class="faq-title">Who can join Computer Science For Highschoolers ?</div>
                 <div class="icon">+</div>
                 </div>
                 <div class="panel">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem commodi provident modi eligendi consequuntur esse consequatur quis corrupti delectus quas.</p>
+                <p>Since computer science is a scientific related domain, highschoolers of scientific fields are the most appropriate ones to join.</p>
                 </div>
             </div>
             <div class="item-2">
                 <div class="accordion">
-                <div class="faq-title">Who can join Computer Science For Highschoolers ?</div>
+                <div class="faq-title">Do I need any prerequisites to join ?</div>
                 <div class="icon">+</div>
                 </div>
                 <div class="panel">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem commodi provident modi eligendi consequuntur esse consequatur quis corrupti delectus quas.nce computer science is a scientific related domain, highschoolers of scientific fields are the most appropriate ones to join.</p>
+                <p>No, CSFH's main goal is to introduce you to the world of computer science. All you need is motivation and curiosity.</p>
                 </div>
             </div>
             <div class="item-3">
                 <div class="accordion">
-                <div class="faq-title">Who can join Computer Science For Highschoolers ?</div>
+                <div class="faq-title">How to join us ?</div>
                 <div class="icon">+</div>
                 </div>
                 <div class="panel">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem commodi provident modi eligendi consequuntur esse consequatur quis corrupti delectus quas.</p>
+                <p>To join the conferences and the workshops, all you need to do is to fill the form that you will find in the website.</p>
                 </div>
             </div>
             <div class="item-4">
                 <div class="accordion">
-                <div class="faq-title">First question</div>
+                <div class="faq-title">When will it take place ?</div>
                 <div class="icon">+</div>
                 </div>
                 <div class="panel">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem commodi provident modi eligendi consequuntur esse consequatur quis corrupti delectus quas.</p>
+                <p>CSFH's first session will take place March 19th, 2022. The next session 2 weeks after.</p>
+                </div>
+            </div>
+            <div class="item-4">
+                <div class="accordion">
+                <div class="faq-title">What will I get from joining CSFH ?</div>
+                <div class="icon">+</div>
+                </div>
+                <div class="panel">
+                <p>CSFH will give you a great overview about the computer science field. By the end, you will be able to create some cool programs and machines and most importantly, you will have a better vision of what you want to become in the near future.</p>
+                </div>
+            </div>
+            <div class="item-4">
+                <div class="accordion">
+                <div class="faq-title">Any other questions ?</div>
+                <div class="icon">+</div>
+                </div>
+                <div class="panel">
+                <p>Contact us.</p>
                 </div>
             </div>
         </article>
